// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runtime format Note model definition with views 1`] = `
{
  "accountData": {
    "noteList": {
      "name": "Note",
      "type": "connection",
    },
  },
  "enums": {
    "NoteStatus": [
      "DEFAULT",
      "IMPORTANT",
      "ARCHIVE",
    ],
  },
  "models": {
    "Note": {
      "accountRelation": {
        "type": "list",
      },
      "id": "NoteID",
    },
  },
  "objects": {
    "Note": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "status": {
        "refName": "NoteStatus",
        "refType": "enum",
        "required": false,
        "type": "reference",
      },
      "text": {
        "required": true,
        "type": "string",
      },
      "title": {
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
  },
}
`;

exports[`Runtime format Post with comments relations 1`] = `
{
  "accountData": {
    "postList": {
      "name": "Post",
      "type": "connection",
    },
  },
  "enums": {},
  "models": {
    "Post": {
      "accountRelation": {
        "type": "list",
      },
      "id": "PostID",
    },
  },
  "objects": {
    "Post": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "date": {
        "required": false,
        "type": "datetime",
      },
      "text": {
        "required": true,
        "type": "string",
      },
      "title": {
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
  },
}
`;

exports[`Runtime format Post with comments relations 2`] = `
{
  "accountData": {
    "commentList": {
      "name": "Comment",
      "type": "connection",
    },
    "postList": {
      "name": "Post",
      "type": "connection",
    },
  },
  "enums": {},
  "models": {
    "Comment": {
      "accountRelation": {
        "type": "list",
      },
      "id": "CommentID",
    },
    "Post": {
      "accountRelation": {
        "type": "list",
      },
      "id": "PostID",
    },
  },
  "objects": {
    "Comment": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "post": {
        "relation": {
          "model": "PostID",
          "property": "postID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postID": {
        "required": true,
        "type": "streamid",
      },
      "text": {
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
    "Post": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "date": {
        "required": false,
        "type": "datetime",
      },
      "text": {
        "required": true,
        "type": "string",
      },
      "title": {
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
  },
}
`;

exports[`Runtime format Post with comments relations 3`] = `
{
  "accountData": {
    "commentList": {
      "name": "Comment",
      "type": "connection",
    },
    "postList": {
      "name": "Post",
      "type": "connection",
    },
  },
  "enums": {},
  "models": {
    "Comment": {
      "accountRelation": {
        "type": "list",
      },
      "id": "CommentID",
    },
    "Post": {
      "accountRelation": {
        "type": "list",
      },
      "id": "PostID",
    },
  },
  "objects": {
    "Comment": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "post": {
        "relation": {
          "model": "PostID",
          "property": "postID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postID": {
        "required": true,
        "type": "streamid",
      },
      "text": {
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
    "Post": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "comments": {
        "relation": {
          "model": "CommentID",
          "property": "postID",
          "source": "queryConnection",
        },
        "type": "view",
        "viewType": "relation",
      },
      "commentsCount": {
        "relation": {
          "model": "CommentID",
          "property": "postID",
          "source": "queryCount",
        },
        "type": "view",
        "viewType": "relation",
      },
      "date": {
        "required": false,
        "type": "datetime",
      },
      "text": {
        "required": true,
        "type": "string",
      },
      "title": {
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
  },
}
`;

exports[`Runtime format Profile - multiples models with common local references 1`] = `
{
  "accountData": {
    "genericProfile": {
      "name": "GenericProfile",
      "type": "node",
    },
    "personProfile": {
      "name": "PersonProfile",
      "type": "node",
    },
    "socialProfile": {
      "name": "SocialProfile",
      "type": "node",
    },
  },
  "enums": {},
  "models": {
    "GenericProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "GenericProfileID",
    },
    "PersonProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "PersonProfileID",
    },
    "SocialProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "SocialProfileID",
    },
  },
  "objects": {
    "GenericProfile": {
      "image": {
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "name": {
        "required": false,
        "type": "string",
      },
    },
    "ImageMetadata": {
      "height": {
        "required": true,
        "type": "integer",
      },
      "mimeType": {
        "required": true,
        "type": "string",
      },
      "size": {
        "required": false,
        "type": "integer",
      },
      "src": {
        "required": true,
        "type": "string",
      },
      "width": {
        "required": true,
        "type": "integer",
      },
    },
    "ImageSources": {
      "alternatives": {
        "item": {
          "refName": "ImageMetadata",
          "refType": "object",
          "required": false,
          "type": "reference",
        },
        "required": false,
        "type": "list",
      },
      "original": {
        "refName": "ImageMetadata",
        "refType": "object",
        "required": true,
        "type": "reference",
      },
    },
    "PersonProfile": {
      "affiliations": {
        "item": {
          "required": false,
          "type": "string",
        },
        "required": false,
        "type": "list",
      },
      "birthDate": {
        "required": false,
        "type": "date",
      },
      "gender": {
        "required": false,
        "type": "string",
      },
      "homeLocation": {
        "required": false,
        "type": "string",
      },
      "nationalities": {
        "item": {
          "required": false,
          "type": "countrycode",
        },
        "required": false,
        "type": "list",
      },
      "residenceCountry": {
        "required": false,
        "type": "countrycode",
      },
    },
    "SocialProfile": {
      "background": {
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "description": {
        "required": false,
        "type": "string",
      },
      "emoji": {
        "required": false,
        "type": "string",
      },
      "url": {
        "required": false,
        "type": "string",
      },
    },
  },
}
`;

exports[`Runtime format Profile definition with added model view 1`] = `
{
  "accountData": {
    "genericProfile": {
      "name": "GenericProfile",
      "type": "node",
    },
    "personProfile": {
      "name": "PersonProfile",
      "type": "node",
    },
    "socialProfile": {
      "name": "SocialProfile",
      "type": "node",
    },
  },
  "enums": {},
  "models": {
    "GenericProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "GenericProfileID",
    },
    "PersonProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "PersonProfileID",
    },
    "SocialProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "SocialProfileID",
    },
  },
  "objects": {
    "GenericProfile": {
      "image": {
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "name": {
        "required": false,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
    "ImageMetadata": {
      "height": {
        "required": true,
        "type": "integer",
      },
      "mimeType": {
        "required": true,
        "type": "string",
      },
      "size": {
        "required": false,
        "type": "integer",
      },
      "src": {
        "required": true,
        "type": "string",
      },
      "width": {
        "required": true,
        "type": "integer",
      },
    },
    "ImageSources": {
      "alternatives": {
        "item": {
          "refName": "ImageMetadata",
          "refType": "object",
          "required": false,
          "type": "reference",
        },
        "required": false,
        "type": "list",
      },
      "original": {
        "refName": "ImageMetadata",
        "refType": "object",
        "required": true,
        "type": "reference",
      },
    },
    "PersonProfile": {
      "affiliations": {
        "item": {
          "required": false,
          "type": "string",
        },
        "required": false,
        "type": "list",
      },
      "birthDate": {
        "required": false,
        "type": "date",
      },
      "gender": {
        "required": false,
        "type": "string",
      },
      "homeLocation": {
        "required": false,
        "type": "string",
      },
      "nationalities": {
        "item": {
          "required": false,
          "type": "countrycode",
        },
        "required": false,
        "type": "list",
      },
      "residenceCountry": {
        "required": false,
        "type": "countrycode",
      },
    },
    "SocialProfile": {
      "background": {
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "description": {
        "required": false,
        "type": "string",
      },
      "emoji": {
        "required": false,
        "type": "string",
      },
      "url": {
        "required": false,
        "type": "string",
      },
    },
  },
}
`;
